<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AnalyzeVideo">


        <VideoView
            android:id="@+id/videoView"
            android:layout_width="wrap_content"
            android:layout_height="1450px"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="videoView"
            />

        <ImageButton
            android:id="@+id/btn_videoFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_videofront"
            android:contentDescription="@string/video_front"

            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="120dp"
            android:layout_marginEnd="60dp"
            />

        <ImageButton
            android:id="@+id/btn_videoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_videoback"
            android:contentDescription="@string/video_back"

            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/btn_videoFront"
            android:layout_marginStart="60dp"
            />

        <ImageButton
            android:id="@+id/btn_videoStartandPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_videostart"
            android:contentDescription="@string/video_start_and_pause"

            android:layout_alignBottom="@+id/btn_videoFront"
            android:layout_alignStart="@+id/btn_videoBack"
            android:layout_marginStart="114dp"
            />

        <ImageButton
            android:id="@+id/btn_takeoff"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/btn_takeoff"
            android:contentDescription="@string/take_off"

            android:layout_alignBottom="@+id/btn_landdown"
            android:layout_alignStart="@+id/btn_videoBack"
            />

        <ImageButton
            android:id="@+id/btn_landdown"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/btn_landdown"
            android:contentDescription="@string/land_down"

            android:layout_alignBottom="@+id/btn_videoFront"
            android:layout_alignEnd="@+id/btn_videoFront"
            android:layout_marginBottom="-80dp"
            />
        <ImageButton
            android:id="@+id/btn_captureTimingOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_done"
            android:contentDescription="@string/Capture_timing_ok"

            android:layout_alignStart="@+id/btn_videoStartandPause"
            android:layout_alignBottom="@id/btn_landdown"
            android:visibility="invisible"
            />
</RelativeLayout>